--- a/diferente.css
+++ b/diferente.css
@@ -147,3 +147,11 @@ p {
         font-size: 10px;
     }
 }
+
+@media screen and (max-width:896px) {
+    p {
+        font-size: 9px;
+        top: 1.8cm;
+        left: 215px;
+    }
+}
